# scarlet

./: Cargo.toml
src/: interval.rs  lib.rs  scalar.rs  transform.rs  transform_inverse_impl.rs  vector.rs  vector_traits.rs  vectori.rs
src/cameras/: camera.rs  mod.rs  thin_lens.rs
src/geometry/: bbox.rs  mod.rs  primitive.rs  ray.rs  shape.rs  sphere.rs
src/math/: interval.rs  interval_as_gfloat.rs  mod.rs  scalar.rs  transform.rs  transform_inverse_impl.rs  vector.rs  vector_traits.rs  vectori.rs
