[package]
name = "scarlet"
version = "0.1.0"
authors = ["Essam <aessam.dahy@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2.15"
more-asserts = "0.3.1"
rand = { version = "0.8.5", features = ["small_rng"] }

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "random_benches"
harness = false
